[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/combiners/Chalk.gd" type="Script" id=1]
[ext_resource path="res://assets/images/Gasoline.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/dpcomic-crowned.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/combiners/ChalkIcon.gd" type="Script" id=4]
[ext_resource path="res://assets/sfx/rejection SFX.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/completion3.wav" type="AudioStream" id=6]

[sub_resource type="GDScript" id=1]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 3 )

[node name="Chalk" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ChalkLine" type="Line2D" parent="."]
default_color = Color( 0.862745, 0.862745, 0.470588, 1 )
texture_mode = 53
script = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="HUD" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="HUD"]
margin_left = -261.778
margin_top = -160.916
margin_right = -131.778
margin_bottom = -133.916
custom_fonts/font = SubResource( 2 )
text = "Magic Time"

[node name="Scores" type="Label" parent="HUD"]
margin_left = 180.708
margin_top = -165.443
margin_right = 276.708
margin_bottom = -78.443
custom_fonts/font = SubResource( 2 )
text = "Score: 0
Lives: 3
"

[node name="Button" type="Button" parent="HUD"]
anchor_right = 0.5
margin_left = -251.778
margin_top = -120.916
margin_right = -192.778
margin_bottom = -96.9163
custom_fonts/font = SubResource( 3 )
text = "START"

[node name="UI" type="CanvasLayer" parent="."]
layer = 5

[node name="ChalkIcon" type="Area2D" parent="UI"]
position = Vector2( -400, -300 )
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 4 )

[node name="Fail" type="Label" parent="UI"]
visible = false
anchor_bottom = 0.5
margin_left = -130.176
margin_top = -71.074
margin_right = -20.176
margin_bottom = 71.926
size_flags_horizontal = 9
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "FAIL
"
align = 1

[node name="Line2D" type="Line2D" parent="."]
default_color = Color( 0.588235, 0.588235, 0.784314, 0.784314 )
texture_mode = 62341488

[node name="RejectionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
pitch_scale = 0.8

[node name="CompletionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
[connection signal="input_event" from="." to="." method="_on_Combiner_input_event"]
[connection signal="pressed" from="HUD/Button" to="." method="_on_Start"]
[connection signal="input_event" from="UI/ChalkIcon" to="UI/ChalkIcon" method="_on_ChalkIcon_input_event"]
